<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:contentDescription="@null"
        android:clickable="true"
        android:elevation="@dimen/dimen_2_dp"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/dimen_8_dp"
        android:text="Menu"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/rich_black"
        android:textStyle="bold"
        app:backgroundTint="@color/sky_blue"
        app:icon="@mipmap/baseline_menu_black_24"
        app:iconPadding="@dimen/dimen_8_dp"
        app:iconSize="@dimen/dimen_18_dp"
        app:iconTint="@color/rich_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/material_blue_100" />


    <ImageButton
        android:id="@+id/btnGithub"
        android:layout_width="@dimen/dimen_54_dp"
        android:layout_height="@dimen/dimen_54_dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@null"
        android:src="@mipmap/ic_github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mrdCloneIcon"
        android:layout_width="@dimen/dimen_96_dp"
        android:layout_height="@dimen/dimen_96_dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/mrd_clone_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />


    <TextView
        android:id="@+id/CloneTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sample_clone_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/rich_black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mrdCloneIcon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/deliver"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16_dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:elevation="@dimen/dimen_8_dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:focusable="true"
        android:foreground="?selectableItemBackgroundBorderless"
        app:cardBackgroundColor="@color/material_yellow_500"
        app:cardCornerRadius="@dimen/dimen_10_dp"
        app:contentPadding="@dimen/dimen_16_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/outline_place_black_24"
            android:drawablePadding="@dimen/dimen_16_dp"
            android:text="@string/sample_button_order"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/rich_black"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:clickable="true"
        android:elevation="@dimen/dimen_2_dp"
        android:focusable="true"
        android:padding="@dimen/dimen_14_dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:text="@string/sample_signup"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/rich_black"
        android:textStyle="bold"
        app:backgroundTint="@color/sky_blue"
        app:cornerRadius="@dimen/dimen_8_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deliver"
        app:layout_constraintVertical_bias="0.1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logIn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:clickable="true"
        android:elevation="@dimen/dimen_2_dp"
        android:focusable="true"
        android:padding="@dimen/dimen_14_dp"
        android:text="@string/sample_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/rich_black"
        android:stateListAnimator="@animator/lift_on_touch"
        android:textStyle="bold"
        app:backgroundTint="@color/sky_blue"
        app:cornerRadius="@dimen/dimen_8_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/signUp"
        app:layout_constraintTop_toBottomOf="@id/deliver"
        app:layout_constraintVertical_bias="0.1"
        app:rippleColor="@color/material_blue_100" />

</androidx.constraintlayout.widget.ConstraintLayout>