<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/locationContainer"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_8_dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/dimen_0_dp"
        app:contentPadding="@dimen/dimen_16_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="@dimen/dimen_54_dp"
                android:layout_height="@dimen/dimen_54_dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@mipmap/baseline_arrow_back_black_24"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/ed_search_bg"
                android:drawableStart="@mipmap/baseline_search_black_24"
                android:drawablePadding="@dimen/dimen_16_dp"
                android:focusable="false"
                android:hint="@string/search_address"
                android:padding="@dimen/dimen_16_dp"
                android:textColor="@color/rich_black"
                android:textColorHint="@color/material_grey_700"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <fragment
        android:id="@+id/map"
        android:name="apps.studios.bt.mrdfoodclone.views.DraggableMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity" />

    <TextView
        android:id="@+id/sheet_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10_dp"
        android:background="@drawable/tooltip_bg"
        android:lines="1"
        android:ellipsize="end"
        android:elevation="@dimen/dimen_10_dp"
        android:padding="@dimen/dimen_10_dp"
        android:text="@string/map_tooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/map_pointer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/map_pointer"
        android:layout_width="@dimen/dimen_48_dp"
        android:layout_height="@dimen/dimen_48_dp"
        android:contentDescription="@null"
        android:src="@mipmap/ic_map_pointer"
        app:layout_constraintBottom_toBottomOf="@id/map"
        app:layout_constraintEnd_toEndOf="@id/map"
        app:layout_constraintStart_toStartOf="@id/map"
        app:layout_constraintTop_toTopOf="@id/map" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveLocation"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_24_dp"
        android:clickable="true"
        android:elevation="@dimen/dimen_8_dp"
        android:focusable="true"
        android:padding="@dimen/dimen_14_dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:text="@string/sample_save_location"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/rich_black"
        android:textStyle="bold"
        app:backgroundTint="@color/material_yellow_500"
        app:cornerRadius="@dimen/dimen_10_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>